@startuml

package ViewController <<Rectangle>> {
    class MainViewController {
        -todoCardsTableView: UITableView
        -doingCardsTableView: UITableView
        -doneCardsTableView: UITableView
    }
    
    class UITableViewCell
    class CardTableViewCell {
        -titleLabel: UILabel
        -descriptionLabel: UILabel
        -deadlineLabel: UILabel
    }
    UITableViewCell <|-- CardTableViewCell
}

package Model <<Rectangle>> {
    class Card {
        +title: String
        +description: String?
        +deadline: Int?
        +status: String
    }
    
    class CardList {
        +cards: [Card]
    }
    
    CardList o-- Card
}

package Manager <<Rectangle>> {
    class DataManager {
        -cardList: CardList?
        -cards: [[Card]]
    }
    
    DataManager o-- Card
    DataManager o-- CardList
}

@enduml
